design menu db
