# docs/swagger/swagger.json
@@ -36,6 +36,35 @@
                 }
             }
         },
+        "/api/shop/menu": {
+            "get": {
+                "description": "取得菜單",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "shop"
+                ],
+                "summary": "取得菜單",
+                "responses": {
+                    "200": {
+                        "description": "菜單",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/resp.MenuKind"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "内部错误",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/auth/register": {
             "post": {
                 "description": "註冊",
@@ -326,6 +355,87 @@
                     "type": "string"
                 },
                 "Password": {
+                    "type": "string"
+                }
+            }
+        },
+        "resp.IntMap": {
+            "type": "object",
+            "properties": {
+                "Pairs": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/resp.IntPair"
+                    }
+                }
+            }
+        },
+        "resp.IntPair": {
+            "type": "object",
+            "properties": {
+                "Key": {
+                    "type": "string"
+                },
+                "Value": {
+                    "type": "integer"
+                }
+            }
+        },
+        "resp.KindOption": {
+            "type": "object",
+            "properties": {
+                "Kind": {
+                    "type": "string"
+                },
+                "Price": {
+                    "type": "integer"
+                }
+            }
+        },
+        "resp.MenuItem": {
+            "type": "object",
+            "properties": {
+                "Name": {
+                    "type": "string"
+                },
+                "SizePrice": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/resp.SizePrice"
+                    }
+                }
+            }
+        },
+        "resp.MenuKind": {
+            "type": "object",
+            "properties": {
+                "CheckOption": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/resp.KindOption"
+                    }
+                },
+                "Items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/resp.MenuItem"
+                    }
+                },
+                "RequiredSelection": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/resp.IntMap"
+                    }
+                }
+            }
+        },
+        "resp.SizePrice": {
+            "type": "object",
+            "properties": {
+                "Price": {
+                    "type": "integer"
+                },
+                "Size": {
                     "type": "string"
                 }
             }
