# src/handler/models/resp/menu.pb.go
@@ -1,0 +1,345 @@
+// Code generated by protoc-gen-go. DO NOT EDIT.
+// source: src/handler/models/resp/menu.proto
+
+// 生成的程式在 Golang 中將會屬於 `resp` 套件。
+
+package resp
+
+import (
+	fmt "fmt"
+	proto "github.com/golang/protobuf/proto"
+	math "math"
+)
+
+// Reference imports to suppress errors if they are not otherwise used.
+var _ = proto.Marshal
+var _ = fmt.Errorf
+var _ = math.Inf
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the proto package it is being compiled against.
+// A compilation error at this line likely means your copy of the
+// proto package needs to be updated.
+const _ = proto.ProtoPackageIsVersion3 // please upgrade the proto package
+
+// MenuItem 。
+type MenuItem struct {
+	Name                 string       `protobuf:"bytes,1,opt,name=Name,proto3" json:"Name,omitempty"`
+	SizePrice            []*SizePrice `protobuf:"bytes,2,rep,name=SizePrice,proto3" json:"SizePrice,omitempty"`
+	XXX_NoUnkeyedLiteral struct{}     `json:"-"`
+	XXX_unrecognized     []byte       `json:"-"`
+	XXX_sizecache        int32        `json:"-"`
+}
+
+func (m *MenuItem) Reset()         { *m = MenuItem{} }
+func (m *MenuItem) String() string { return proto.CompactTextString(m) }
+func (*MenuItem) ProtoMessage()    {}
+func (*MenuItem) Descriptor() ([]byte, []int) {
+	return fileDescriptor_9605b9fdee46970e, []int{0}
+}
+
+func (m *MenuItem) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_MenuItem.Unmarshal(m, b)
+}
+func (m *MenuItem) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_MenuItem.Marshal(b, m, deterministic)
+}
+func (m *MenuItem) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_MenuItem.Merge(m, src)
+}
+func (m *MenuItem) XXX_Size() int {
+	return xxx_messageInfo_MenuItem.Size(m)
+}
+func (m *MenuItem) XXX_DiscardUnknown() {
+	xxx_messageInfo_MenuItem.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_MenuItem proto.InternalMessageInfo
+
+func (m *MenuItem) GetName() string {
+	if m != nil {
+		return m.Name
+	}
+	return ""
+}
+
+func (m *MenuItem) GetSizePrice() []*SizePrice {
+	if m != nil {
+		return m.SizePrice
+	}
+	return nil
+}
+
+// SizePrice 。
+type SizePrice struct {
+	Size                 string   `protobuf:"bytes,1,opt,name=Size,proto3" json:"Size,omitempty"`
+	Price                int32    `protobuf:"varint,2,opt,name=Price,proto3" json:"Price,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *SizePrice) Reset()         { *m = SizePrice{} }
+func (m *SizePrice) String() string { return proto.CompactTextString(m) }
+func (*SizePrice) ProtoMessage()    {}
+func (*SizePrice) Descriptor() ([]byte, []int) {
+	return fileDescriptor_9605b9fdee46970e, []int{1}
+}
+
+func (m *SizePrice) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_SizePrice.Unmarshal(m, b)
+}
+func (m *SizePrice) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_SizePrice.Marshal(b, m, deterministic)
+}
+func (m *SizePrice) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_SizePrice.Merge(m, src)
+}
+func (m *SizePrice) XXX_Size() int {
+	return xxx_messageInfo_SizePrice.Size(m)
+}
+func (m *SizePrice) XXX_DiscardUnknown() {
+	xxx_messageInfo_SizePrice.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_SizePrice proto.InternalMessageInfo
+
+func (m *SizePrice) GetSize() string {
+	if m != nil {
+		return m.Size
+	}
+	return ""
+}
+
+func (m *SizePrice) GetPrice() int32 {
+	if m != nil {
+		return m.Price
+	}
+	return 0
+}
+
+// KindOption 。
+type KindOption struct {
+	Kind                 string   `protobuf:"bytes,1,opt,name=Kind,proto3" json:"Kind,omitempty"`
+	Price                int32    `protobuf:"varint,2,opt,name=Price,proto3" json:"Price,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *KindOption) Reset()         { *m = KindOption{} }
+func (m *KindOption) String() string { return proto.CompactTextString(m) }
+func (*KindOption) ProtoMessage()    {}
+func (*KindOption) Descriptor() ([]byte, []int) {
+	return fileDescriptor_9605b9fdee46970e, []int{2}
+}
+
+func (m *KindOption) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_KindOption.Unmarshal(m, b)
+}
+func (m *KindOption) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_KindOption.Marshal(b, m, deterministic)
+}
+func (m *KindOption) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_KindOption.Merge(m, src)
+}
+func (m *KindOption) XXX_Size() int {
+	return xxx_messageInfo_KindOption.Size(m)
+}
+func (m *KindOption) XXX_DiscardUnknown() {
+	xxx_messageInfo_KindOption.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_KindOption proto.InternalMessageInfo
+
+func (m *KindOption) GetKind() string {
+	if m != nil {
+		return m.Kind
+	}
+	return ""
+}
+
+func (m *KindOption) GetPrice() int32 {
+	if m != nil {
+		return m.Price
+	}
+	return 0
+}
+
+// MenuKind 。
+type MenuKind struct {
+	Items                []*MenuItem   `protobuf:"bytes,1,rep,name=Items,proto3" json:"Items,omitempty"`
+	RequiredSelection    []*IntMap     `protobuf:"bytes,3,rep,name=RequiredSelection,proto3" json:"RequiredSelection,omitempty"`
+	CheckOption          []*KindOption `protobuf:"bytes,4,rep,name=CheckOption,proto3" json:"CheckOption,omitempty"`
+	XXX_NoUnkeyedLiteral struct{}      `json:"-"`
+	XXX_unrecognized     []byte        `json:"-"`
+	XXX_sizecache        int32         `json:"-"`
+}
+
+func (m *MenuKind) Reset()         { *m = MenuKind{} }
+func (m *MenuKind) String() string { return proto.CompactTextString(m) }
+func (*MenuKind) ProtoMessage()    {}
+func (*MenuKind) Descriptor() ([]byte, []int) {
+	return fileDescriptor_9605b9fdee46970e, []int{3}
+}
+
+func (m *MenuKind) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_MenuKind.Unmarshal(m, b)
+}
+func (m *MenuKind) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_MenuKind.Marshal(b, m, deterministic)
+}
+func (m *MenuKind) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_MenuKind.Merge(m, src)
+}
+func (m *MenuKind) XXX_Size() int {
+	return xxx_messageInfo_MenuKind.Size(m)
+}
+func (m *MenuKind) XXX_DiscardUnknown() {
+	xxx_messageInfo_MenuKind.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_MenuKind proto.InternalMessageInfo
+
+func (m *MenuKind) GetItems() []*MenuItem {
+	if m != nil {
+		return m.Items
+	}
+	return nil
+}
+
+func (m *MenuKind) GetRequiredSelection() []*IntMap {
+	if m != nil {
+		return m.RequiredSelection
+	}
+	return nil
+}
+
+func (m *MenuKind) GetCheckOption() []*KindOption {
+	if m != nil {
+		return m.CheckOption
+	}
+	return nil
+}
+
+// IntPair 。
+type IntPair struct {
+	Key                  string   `protobuf:"bytes,1,opt,name=Key,proto3" json:"Key,omitempty"`
+	Value                int32    `protobuf:"varint,2,opt,name=Value,proto3" json:"Value,omitempty"`
+	XXX_NoUnkeyedLiteral struct{} `json:"-"`
+	XXX_unrecognized     []byte   `json:"-"`
+	XXX_sizecache        int32    `json:"-"`
+}
+
+func (m *IntPair) Reset()         { *m = IntPair{} }
+func (m *IntPair) String() string { return proto.CompactTextString(m) }
+func (*IntPair) ProtoMessage()    {}
+func (*IntPair) Descriptor() ([]byte, []int) {
+	return fileDescriptor_9605b9fdee46970e, []int{4}
+}
+
+func (m *IntPair) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_IntPair.Unmarshal(m, b)
+}
+func (m *IntPair) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_IntPair.Marshal(b, m, deterministic)
+}
+func (m *IntPair) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_IntPair.Merge(m, src)
+}
+func (m *IntPair) XXX_Size() int {
+	return xxx_messageInfo_IntPair.Size(m)
+}
+func (m *IntPair) XXX_DiscardUnknown() {
+	xxx_messageInfo_IntPair.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_IntPair proto.InternalMessageInfo
+
+func (m *IntPair) GetKey() string {
+	if m != nil {
+		return m.Key
+	}
+	return ""
+}
+
+func (m *IntPair) GetValue() int32 {
+	if m != nil {
+		return m.Value
+	}
+	return 0
+}
+
+// IntMap 。
+type IntMap struct {
+	Pairs                []*IntPair `protobuf:"bytes,1,rep,name=Pairs,proto3" json:"Pairs,omitempty"`
+	XXX_NoUnkeyedLiteral struct{}   `json:"-"`
+	XXX_unrecognized     []byte     `json:"-"`
+	XXX_sizecache        int32      `json:"-"`
+}
+
+func (m *IntMap) Reset()         { *m = IntMap{} }
+func (m *IntMap) String() string { return proto.CompactTextString(m) }
+func (*IntMap) ProtoMessage()    {}
+func (*IntMap) Descriptor() ([]byte, []int) {
+	return fileDescriptor_9605b9fdee46970e, []int{5}
+}
+
+func (m *IntMap) XXX_Unmarshal(b []byte) error {
+	return xxx_messageInfo_IntMap.Unmarshal(m, b)
+}
+func (m *IntMap) XXX_Marshal(b []byte, deterministic bool) ([]byte, error) {
+	return xxx_messageInfo_IntMap.Marshal(b, m, deterministic)
+}
+func (m *IntMap) XXX_Merge(src proto.Message) {
+	xxx_messageInfo_IntMap.Merge(m, src)
+}
+func (m *IntMap) XXX_Size() int {
+	return xxx_messageInfo_IntMap.Size(m)
+}
+func (m *IntMap) XXX_DiscardUnknown() {
+	xxx_messageInfo_IntMap.DiscardUnknown(m)
+}
+
+var xxx_messageInfo_IntMap proto.InternalMessageInfo
+
+func (m *IntMap) GetPairs() []*IntPair {
+	if m != nil {
+		return m.Pairs
+	}
+	return nil
+}
+
+func init() {
+	proto.RegisterType((*MenuItem)(nil), "resp.MenuItem")
+	proto.RegisterType((*SizePrice)(nil), "resp.SizePrice")
+	proto.RegisterType((*KindOption)(nil), "resp.KindOption")
+	proto.RegisterType((*MenuKind)(nil), "resp.MenuKind")
+	proto.RegisterType((*IntPair)(nil), "resp.IntPair")
+	proto.RegisterType((*IntMap)(nil), "resp.IntMap")
+}
+
+func init() { proto.RegisterFile("src/handler/models/resp/menu.proto", fileDescriptor_9605b9fdee46970e) }
+
+var fileDescriptor_9605b9fdee46970e = []byte{
+	// 298 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x74, 0x91, 0x4f, 0x4f, 0x83, 0x40,
+	0x10, 0xc5, 0x83, 0x40, 0xb5, 0x53, 0xff, 0xd4, 0x8d, 0x07, 0x8e, 0xcd, 0xea, 0x81, 0x4b, 0x21,
+	0xd6, 0xe8, 0xc1, 0xab, 0x27, 0xd2, 0xa0, 0xcd, 0x36, 0xf1, 0x8e, 0x30, 0x49, 0x37, 0xc2, 0x82,
+	0x0b, 0x1c, 0xf4, 0xd3, 0xf8, 0x51, 0xcd, 0xec, 0x0a, 0x6d, 0x62, 0xbc, 0xcd, 0x9b, 0x7d, 0xbf,
+	0xe1, 0xbd, 0x00, 0xbc, 0xd5, 0x79, 0xbc, 0xcb, 0x54, 0x51, 0xa2, 0x8e, 0xab, 0xba, 0xc0, 0xb2,
+	0x8d, 0x35, 0xb6, 0x4d, 0x5c, 0xa1, 0xea, 0xa3, 0x46, 0xd7, 0x5d, 0xcd, 0x3c, 0x5a, 0xf0, 0x14,
+	0x4e, 0x52, 0x54, 0x7d, 0xd2, 0x61, 0xc5, 0x18, 0x78, 0xcf, 0x59, 0x85, 0x81, 0xb3, 0x70, 0xc2,
+	0xa9, 0x30, 0x33, 0x5b, 0xc2, 0x74, 0x2b, 0xbf, 0x70, 0xa3, 0x65, 0x8e, 0xc1, 0xd1, 0xc2, 0x0d,
+	0x67, 0xab, 0x8b, 0x88, 0xc8, 0x68, 0x5c, 0x8b, 0xbd, 0x83, 0xdf, 0x1f, 0xd8, 0xe9, 0x1e, 0x89,
+	0xe1, 0x1e, 0xcd, 0xec, 0x0a, 0xfc, 0xe1, 0x96, 0x13, 0xfa, 0xc2, 0x0a, 0xfe, 0x00, 0xb0, 0x96,
+	0xaa, 0x78, 0x69, 0x3a, 0x59, 0x2b, 0xe2, 0x48, 0x0d, 0x1c, 0xcd, 0xff, 0x70, 0xdf, 0x8e, 0x8d,
+	0x6f, 0x2c, 0x37, 0xe0, 0x53, 0x8d, 0x36, 0x70, 0x4c, 0xcc, 0x73, 0x1b, 0x73, 0x68, 0x27, 0xec,
+	0x23, 0x7b, 0x84, 0x4b, 0x81, 0x1f, 0xbd, 0xd4, 0x58, 0x6c, 0xb1, 0xc4, 0x9c, 0xbe, 0x18, 0xb8,
+	0x86, 0x38, 0xb5, 0x44, 0xa2, 0xba, 0x34, 0x6b, 0xc4, 0x5f, 0x1b, 0x5b, 0xc1, 0xec, 0x69, 0x87,
+	0xf9, 0xbb, 0xcd, 0x19, 0x78, 0x86, 0x9a, 0x5b, 0x6a, 0x9f, 0x5f, 0x1c, 0x9a, 0xf8, 0x2d, 0x1c,
+	0x27, 0xaa, 0xdb, 0x64, 0x52, 0xb3, 0x39, 0xb8, 0x6b, 0xfc, 0xfc, 0xad, 0x45, 0x23, 0xb5, 0x7a,
+	0xcd, 0xca, 0x7e, 0x6c, 0x65, 0x04, 0x5f, 0xc2, 0xc4, 0x66, 0x60, 0xd7, 0xe0, 0x13, 0x39, 0x54,
+	0x3a, 0x1b, 0x03, 0xd2, 0x56, 0xd8, 0xb7, 0xb7, 0x89, 0xf9, 0x9f, 0x77, 0x3f, 0x01, 0x00, 0x00,
+	0xff, 0xff, 0xd0, 0x2c, 0xd3, 0x6b, 0xf5, 0x01, 0x00, 0x00,
+}
